Fix login/register with username-password
hehe