@@ -30,10 +30,10 @@ public class AdminController {
 
     @Autowired
     private UserService userService;
-    
+
     @Autowired
     private RoleService roleService;
-    
+
     @Autowired
     private CurrentUserService currentUserService;
 
@@ -48,7 +48,7 @@ public class AdminController {
             List<Role> roles = roleService.getAllRoles();
             return ResponseEntity.ok(ApiResponse.success("Roles retrieved successfully", roles));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to retrieve roles: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to retrieve roles: " + e.getMessage()));
         }
     }
 
@@ -59,8 +59,10 @@ public class AdminController {
             Role role = roleService.getRoleByName(roleName)
                     .orElseThrow(() -> new RuntimeException("Role not found"));
             return ResponseEntity.ok(ApiResponse.success("Role retrieved successfully", role));
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(404).body(ApiResponse.error("Failed to retrieve role: " + e.getMessage()));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to retrieve role: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to retrieve role: " + e.getMessage()));
         }
     }
 
@@ -70,8 +72,10 @@ public class AdminController {
         try {
             Role role = roleService.createRole(request.getRoleName(), request.getDescription());
             return ResponseEntity.ok(ApiResponse.success("Role created successfully", role));
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(ApiResponse.error("Failed to create role: " + e.getMessage()));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to create role: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to create role: " + e.getMessage()));
         }
     }
 
@@ -86,7 +90,7 @@ public class AdminController {
             List<User> users = userService.getAllUsers();
             return ResponseEntity.ok(ApiResponse.success("Users retrieved successfully", users));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to retrieve users: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to retrieve users: " + e.getMessage()));
         }
     }
 
@@ -97,47 +101,53 @@ public class AdminController {
             User user = userService.getUserById(userId)
                     .orElseThrow(() -> new RuntimeException("User not found"));
             return ResponseEntity.ok(ApiResponse.success("User retrieved successfully", user));
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(404).body(ApiResponse.error("Failed to retrieve user: " + e.getMessage()));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to retrieve user: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to retrieve user: " + e.getMessage()));
         }
     }
 
     @PutMapping("/users/{userId}/role")
     @Operation(summary = "Assign role to user", description = "Assign a specific role to a user")
     public ResponseEntity<ApiResponse<User>> assignRoleToUser(
-            @PathVariable Long userId, 
+            @PathVariable Long userId,
             @Valid @RequestBody RoleAssignmentRequest request) {
         try {
-            // Get user and role
-            User user = userService.getUserById(userId)
+            // ✅ Gán role đúng chuẩn JPA (set Role entity, không set roleId thô)
+            userService.assignRole(userId, request.getRoleName());
+
+            // Load lại user sau khi cập nhật
+            User updated = userService.getUserById(userId)
                     .orElseThrow(() -> new RuntimeException("User not found"));
-            Role role = roleService.getRoleByName(request.getRoleName())
-                    .orElseThrow(() -> new RuntimeException("Role not found"));
-            
-            // Assign role
-            user.setRoleId(role.getId());
-            userService.updateUser(user);
-            
-            return ResponseEntity.ok(ApiResponse.success("Role assigned successfully", user));
+
+            return ResponseEntity.ok(ApiResponse.success("Role assigned successfully", updated));
+        } catch (RuntimeException e) {
+            String msg = e.getMessage();
+            int status = (msg != null && (msg.contains("User not found") || msg.contains("Role not found"))) ? 404 : 400;
+            return ResponseEntity.status(status).body(ApiResponse.error("Failed to assign role: " + msg));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to assign role: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to assign role: " + e.getMessage()));
         }
     }
 
     @PutMapping("/users/{userId}/status")
     @Operation(summary = "Update user status", description = "Activate or deactivate a user account")
     public ResponseEntity<ApiResponse<User>> updateUserStatus(
-            @PathVariable Long userId, 
+            @PathVariable Long userId,
             @Valid @RequestBody UserStatusRequest request) {
         try {
             User user = userService.getUserById(userId)
                     .orElseThrow(() -> new RuntimeException("User not found"));
+
             user.setIsActive(request.getIsActive());
             userService.updateUser(user);
-            
+
             return ResponseEntity.ok(ApiResponse.success("User status updated successfully", user));
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(404).body(ApiResponse.error("Failed to update user status: " + e.getMessage()));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to update user status: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to update user status: " + e.getMessage()));
         }
     }
 
@@ -148,7 +158,7 @@ public class AdminController {
             userService.deleteUser(userId);
             return ResponseEntity.ok(ApiResponse.success("User deleted successfully", "User with ID " + userId + " has been deleted"));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to delete user: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to delete user: " + e.getMessage()));
         }
     }
 
@@ -164,21 +174,20 @@ public class AdminController {
             @RequestParam(required = false) Boolean isVerified) {
         try {
             List<User> allUsers = userService.getAllUsers();
-            
-            // Apply filters
+
             List<User> filteredUsers = allUsers.stream()
-                .filter(user -> username == null || user.getUsername().toLowerCase().contains(username.toLowerCase()))
-                .filter(user -> email == null || user.getEmail().toLowerCase().contains(email.toLowerCase()))
-                .filter(user -> role == null || (user.getRole() != null && user.getRole().getRoleName().equals(role)))
-                .filter(user -> country == null || (user.getCountry() != null && user.getCountry().toLowerCase().contains(country.toLowerCase())))
-                .filter(user -> jlptLevel == null || (user.getCurrentJlptLevel() != null && user.getCurrentJlptLevel().name().equals(jlptLevel)))
-                .filter(user -> isActive == null || user.getIsActive().equals(isActive))
-                .filter(user -> isVerified == null || user.getIsVerified().equals(isVerified))
-                .collect(java.util.stream.Collectors.toList());
-            
+                    .filter(u -> username == null || (u.getUsername() != null && u.getUsername().toLowerCase().contains(username.toLowerCase())))
+                    .filter(u -> email == null || (u.getEmail() != null && u.getEmail().toLowerCase().contains(email.toLowerCase())))
+                    .filter(u -> role == null || (u.getRole() != null && role.equals(u.getRole().getRoleName())))
+                    .filter(u -> country == null || (u.getCountry() != null && u.getCountry().toLowerCase().contains(country.toLowerCase())))
+                    .filter(u -> jlptLevel == null || (u.getCurrentJlptLevel() != null && u.getCurrentJlptLevel().name().equals(jlptLevel)))
+                    .filter(u -> isActive == null || Boolean.valueOf(Boolean.TRUE.equals(u.getIsActive())).equals(isActive))
+                    .filter(u -> isVerified == null || Boolean.valueOf(Boolean.TRUE.equals(u.getIsVerified())).equals(isVerified))
+                    .toList();
+
             return ResponseEntity.ok(ApiResponse.success("Users found: " + filteredUsers.size(), filteredUsers));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to search users: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to search users: " + e.getMessage()));
         }
     }
 
@@ -187,69 +196,68 @@ public class AdminController {
     public ResponseEntity<ApiResponse<Map<String, Object>>> getUserAnalytics() {
         try {
             List<User> allUsers = userService.getAllUsers();
-            
+
             // Registration trends (last 30 days)
             Map<String, Long> registrationTrends = new HashMap<>();
             for (int i = 29; i >= 0; i--) {
                 java.time.LocalDateTime date = java.time.LocalDateTime.now().minusDays(i);
                 long count = allUsers.stream()
-                    .filter(user -> user.getCreatedAt() != null && 
-                        user.getCreatedAt().toLocalDate().equals(date.toLocalDate()))
-                    .count();
+                        .filter(u -> u.getCreatedAt() != null && u.getCreatedAt().toLocalDate().equals(date.toLocalDate()))
+                        .count();
                 registrationTrends.put(date.toLocalDate().toString(), count);
             }
-            
+
             // User activity by hour (last 24 hours)
             Map<String, Long> activityByHour = new HashMap<>();
             for (int i = 23; i >= 0; i--) {
                 java.time.LocalDateTime hour = java.time.LocalDateTime.now().minusHours(i);
                 long count = allUsers.stream()
-                    .filter(user -> user.getLastLoginAt() != null && 
-                        user.getLastLoginAt().isAfter(hour.minusHours(1)) && 
-                        user.getLastLoginAt().isBefore(hour.plusHours(1)))
-                    .count();
+                        .filter(u -> u.getLastLoginAt() != null
+                                && !u.getLastLoginAt().isBefore(hour.minusHours(1))
+                                && !u.getLastLoginAt().isAfter(hour.plusHours(1)))
+                        .count();
                 activityByHour.put(hour.getHour() + ":00", count);
             }
-            
+
             // Top countries
             Map<String, Long> topCountries = allUsers.stream()
-                .filter(user -> user.getCountry() != null && !user.getCountry().isEmpty())
-                .collect(java.util.stream.Collectors.groupingBy(
-                    User::getCountry,
-                    java.util.stream.Collectors.counting()
-                ))
-                .entrySet().stream()
-                .sorted(Map.Entry.<String, Long>comparingByValue().reversed())
-                .limit(10)
-                .collect(java.util.stream.Collectors.toMap(
-                    Map.Entry::getKey,
-                    Map.Entry::getValue,
-                    (e1, e2) -> e1,
-                    java.util.LinkedHashMap::new
-                ));
-            
+                    .filter(u -> u.getCountry() != null && !u.getCountry().isEmpty())
+                    .collect(java.util.stream.Collectors.groupingBy(
+                            User::getCountry,
+                            java.util.stream.Collectors.counting()
+                    ))
+                    .entrySet().stream()
+                    .sorted(Map.Entry.<String, Long>comparingByValue().reversed())
+                    .limit(10)
+                    .collect(java.util.stream.Collectors.toMap(
+                            Map.Entry::getKey,
+                            Map.Entry::getValue,
+                            (e1, e2) -> e1,
+                            java.util.LinkedHashMap::new
+                    ));
+
             // JLPT level distribution
             Map<String, Long> jlptDistribution = new HashMap<>();
             for (User.JLPTLevel level : User.JLPTLevel.values()) {
                 long count = allUsers.stream()
-                    .filter(user -> user.getCurrentJlptLevel() == level)
-                    .count();
+                        .filter(u -> u.getCurrentJlptLevel() == level)
+                        .count();
                 jlptDistribution.put(level.name(), count);
             }
-            
+
             Map<String, Object> analytics = new HashMap<>();
             analytics.put("registrationTrends", registrationTrends);
             analytics.put("activityByHour", activityByHour);
             analytics.put("topCountries", topCountries);
             analytics.put("jlptDistribution", jlptDistribution);
             analytics.put("totalUsers", allUsers.size());
-            analytics.put("activeUsers", allUsers.stream().filter(User::getIsActive).count());
-            analytics.put("verifiedUsers", allUsers.stream().filter(User::getIsVerified).count());
+            analytics.put("activeUsers", allUsers.stream().filter(u -> Boolean.TRUE.equals(u.getIsActive())).count());   // ✅ tránh NPE
+            analytics.put("verifiedUsers", allUsers.stream().filter(u -> Boolean.TRUE.equals(u.getIsVerified())).count()); // ✅ tránh NPE
             analytics.put("lastUpdated", java.time.LocalDateTime.now());
-            
+
             return ResponseEntity.ok(ApiResponse.success("User analytics retrieved successfully", analytics));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to retrieve user analytics: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to retrieve user analytics: " + e.getMessage()));
         }
     }
 
@@ -261,10 +269,12 @@ public class AdminController {
                     .orElseThrow(() -> new RuntimeException("User not found"));
             user.setIsVerified(true);
             userService.updateUser(user);
-            
+
             return ResponseEntity.ok(ApiResponse.success("User verified successfully", user));
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(404).body(ApiResponse.error("Failed to verify user: " + e.getMessage()));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to verify user: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to verify user: " + e.getMessage()));
         }
     }
 
@@ -273,37 +283,36 @@ public class AdminController {
     public ResponseEntity<ApiResponse<Map<String, Object>>> exportUsers() {
         try {
             List<User> allUsers = userService.getAllUsers();
-            
-            // Create CSV-like data structure
+
             List<Map<String, Object>> csvData = allUsers.stream()
-                .map(user -> {
-                    Map<String, Object> row = new HashMap<>();
-                    row.put("id", user.getId());
-                    row.put("username", user.getUsername());
-                    row.put("email", user.getEmail());
-                    row.put("displayName", user.getDisplayName());
-                    row.put("country", user.getCountry());
-                    row.put("nativeLanguage", user.getNativeLanguage());
-                    row.put("learningLanguage", user.getLearningLanguage());
-                    row.put("currentJlptLevel", user.getCurrentJlptLevel() != null ? user.getCurrentJlptLevel().name() : "N/A");
-                    row.put("role", user.getRole() != null ? user.getRole().getRoleName() : "No role");
-                    row.put("isActive", user.getIsActive());
-                    row.put("isVerified", user.getIsVerified());
-                    row.put("createdAt", user.getCreatedAt());
-                    row.put("lastLoginAt", user.getLastLoginAt());
-                    return row;
-                })
-                .collect(java.util.stream.Collectors.toList());
-            
+                    .map(u -> {
+                        Map<String, Object> row = new HashMap<>();
+                        row.put("id", u.getId());
+                        row.put("username", u.getUsername());
+                        row.put("email", u.getEmail());
+                        row.put("displayName", u.getDisplayName());
+                        row.put("country", u.getCountry());
+                        row.put("nativeLanguage", u.getNativeLanguage());
+                        row.put("learningLanguage", u.getLearningLanguage());
+                        row.put("currentJlptLevel", u.getCurrentJlptLevel() != null ? u.getCurrentJlptLevel().name() : "N/A");
+                        row.put("role", u.getRole() != null ? u.getRole().getRoleName() : "No role");
+                        row.put("isActive", u.getIsActive());
+                        row.put("isVerified", u.getIsVerified());
+                        row.put("createdAt", u.getCreatedAt());
+                        row.put("lastLoginAt", u.getLastLoginAt());
+                        return row;
+                    })
+                    .toList();
+
             Map<String, Object> export = new HashMap<>();
             export.put("data", csvData);
             export.put("totalRecords", csvData.size());
             export.put("exportedAt", java.time.LocalDateTime.now());
             export.put("format", "CSV-ready");
-            
+
             return ResponseEntity.ok(ApiResponse.success("Users data exported successfully", export));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to export users data: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to export users data: " + e.getMessage()));
         }
     }
 
@@ -318,7 +327,7 @@ public class AdminController {
             roleService.initializeDefaultRoles();
             return ResponseEntity.ok(ApiResponse.success("Default roles initialized successfully", "All default roles have been created"));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to initialize roles: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to initialize roles: " + e.getMessage()));
         }
     }
 
@@ -327,50 +336,50 @@ public class AdminController {
     public ResponseEntity<ApiResponse<Map<String, Object>>> getSystemHealth() {
         try {
             Map<String, Object> health = new HashMap<>();
-            
+
             // Database health
             try {
                 List<User> users = userService.getAllUsers();
                 List<Role> roles = roleService.getAllRoles();
                 health.put("database", Map.of(
-                    "status", "UP",
-                    "usersCount", users.size(),
-                    "rolesCount", roles.size()
+                        "status", "UP",
+                        "usersCount", users.size(),
+                        "rolesCount", roles.size()
                 ));
             } catch (Exception e) {
                 health.put("database", Map.of(
-                    "status", "DOWN",
-                    "error", e.getMessage()
+                        "status", "DOWN",
+                        "error", e.getMessage()
                 ));
             }
-            
+
             // Memory usage
             Runtime runtime = Runtime.getRuntime();
             long totalMemory = runtime.totalMemory();
             long freeMemory = runtime.freeMemory();
             long usedMemory = totalMemory - freeMemory;
-            
+
             health.put("memory", Map.of(
-                "total", totalMemory,
-                "used", usedMemory,
-                "free", freeMemory,
-                "usagePercentage", Math.round((double) usedMemory / totalMemory * 100)
+                    "total", totalMemory,
+                    "used", usedMemory,
+                    "free", freeMemory,
+                    "usagePercentage", Math.round((double) usedMemory / totalMemory * 100)
             ));
-            
+
             // System info
             health.put("system", Map.of(
-                "javaVersion", System.getProperty("java.version"),
-                "osName", System.getProperty("os.name"),
-                "osVersion", System.getProperty("os.version"),
-                "uptime", System.currentTimeMillis() - java.lang.management.ManagementFactory.getRuntimeMXBean().getStartTime()
+                    "javaVersion", System.getProperty("java.version"),
+                    "osName", System.getProperty("os.name"),
+                    "osVersion", System.getProperty("os.version"),
+                    "uptime", System.currentTimeMillis() - java.lang.management.ManagementFactory.getRuntimeMXBean().getStartTime()
             ));
-            
+
             health.put("timestamp", java.time.LocalDateTime.now());
             health.put("overallStatus", "UP");
-            
+
             return ResponseEntity.ok(ApiResponse.success("System health retrieved successfully", health));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to retrieve system health: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to retrieve system health: " + e.getMessage()));
         }
     }
 
@@ -379,30 +388,32 @@ public class AdminController {
     public ResponseEntity<ApiResponse<Map<String, Object>>> getSystemLogs() {
         try {
             Map<String, Object> logs = new HashMap<>();
-            
+
+            List<User> allUsers = userService.getAllUsers();
+
             // Recent user registrations
-            List<User> recentUsers = userService.getAllUsers().stream()
-                .filter(user -> user.getCreatedAt() != null)
-                .sorted((u1, u2) -> u2.getCreatedAt().compareTo(u1.getCreatedAt()))
-                .limit(20)
-                .collect(java.util.stream.Collectors.toList());
-            
+            List<User> recentUsers = allUsers.stream()
+                    .filter(u -> u.getCreatedAt() != null)
+                    .sorted((u1, u2) -> u2.getCreatedAt().compareTo(u1.getCreatedAt()))
+                    .limit(20)
+                    .toList();
+
             // Recent logins
-            List<User> recentLogins = userService.getAllUsers().stream()
-                .filter(user -> user.getLastLoginAt() != null)
-                .sorted((u1, u2) -> u2.getLastLoginAt().compareTo(u1.getLastLoginAt()))
-                .limit(20)
-                .collect(java.util.stream.Collectors.toList());
-            
+            List<User> recentLogins = allUsers.stream()
+                    .filter(u -> u.getLastLoginAt() != null)
+                    .sorted((u1, u2) -> u2.getLastLoginAt().compareTo(u1.getLastLoginAt()))
+                    .limit(20)
+                    .toList();
+
             logs.put("recentRegistrations", recentUsers);
             logs.put("recentLogins", recentLogins);
-            logs.put("totalRegistrations", userService.getAllUsers().size());
-            logs.put("activeUsers", userService.getAllUsers().stream().filter(User::getIsActive).count());
+            logs.put("totalRegistrations", allUsers.size());
+            logs.put("activeUsers", allUsers.stream().filter(u -> Boolean.TRUE.equals(u.getIsActive())).count()); // ✅ tránh NPE
             logs.put("lastUpdated", java.time.LocalDateTime.now());
-            
+
             return ResponseEntity.ok(ApiResponse.success("System logs retrieved successfully", logs));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to retrieve system logs: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to retrieve system logs: " + e.getMessage()));
         }
     }
 
@@ -411,31 +422,31 @@ public class AdminController {
     public ResponseEntity<ApiResponse<Map<String, Object>>> performCleanup() {
         try {
             Map<String, Object> cleanup = new HashMap<>();
-            
-            // Count inactive users
-            long inactiveUsers = userService.getAllUsers().stream()
-                .filter(user -> !user.getIsActive())
-                .count();
-            
-            // Count unverified users older than 30 days
-            long oldUnverifiedUsers = userService.getAllUsers().stream()
-                .filter(user -> !user.getIsVerified() && 
-                    user.getCreatedAt() != null && 
-                    user.getCreatedAt().isBefore(java.time.LocalDateTime.now().minusDays(30)))
-                .count();
-            
+
+            List<User> allUsers = userService.getAllUsers();
+
+            long inactiveUsers = allUsers.stream()
+                    .filter(u -> !Boolean.TRUE.equals(u.getIsActive()))
+                    .count();
+
+            long oldUnverifiedUsers = allUsers.stream()
+                    .filter(u -> !Boolean.TRUE.equals(u.getIsVerified())
+                            && u.getCreatedAt() != null
+                            && u.getCreatedAt().isBefore(java.time.LocalDateTime.now().minusDays(30)))
+                    .count();
+
             cleanup.put("inactiveUsers", inactiveUsers);
             cleanup.put("oldUnverifiedUsers", oldUnverifiedUsers);
             cleanup.put("cleanupPerformed", java.time.LocalDateTime.now());
             cleanup.put("recommendations", List.of(
-                "Consider deactivating old unverified accounts",
-                "Review inactive user accounts",
-                "Archive old system logs"
+                    "Consider deactivating old unverified accounts",
+                    "Review inactive user accounts",
+                    "Archive old system logs"
             ));
-            
+
             return ResponseEntity.ok(ApiResponse.success("System cleanup analysis completed", cleanup));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to perform system cleanup: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to perform system cleanup: " + e.getMessage()));
         }
     }
 
@@ -443,65 +454,62 @@ public class AdminController {
     @Operation(summary = "Get admin dashboard data", description = "Get comprehensive dashboard data for admin")
     public ResponseEntity<ApiResponse<Map<String, Object>>> getDashboard() {
         try {
-            // Get user statistics
             List<User> allUsers = userService.getAllUsers();
             long totalUsers = allUsers.size();
-            long activeUsers = allUsers.stream().filter(User::getIsActive).count();
-            long verifiedUsers = allUsers.stream().filter(User::getIsVerified).count();
-            
-            // Get role statistics
+            long activeUsers = allUsers.stream().filter(u -> Boolean.TRUE.equals(u.getIsActive())).count();   // ✅
+            long verifiedUsers = allUsers.stream().filter(u -> Boolean.TRUE.equals(u.getIsVerified())).count(); // ✅
+
             List<Role> allRoles = roleService.getAllRoles();
             Map<String, Long> roleStats = new HashMap<>();
             for (Role role : allRoles) {
                 long count = allUsers.stream()
-                    .filter(user -> user.getRole() != null && user.getRole().getRoleName().equals(role.getRoleName()))
-                    .count();
+                        .filter(u -> u.getRole() != null && role.getRoleName().equals(u.getRole().getRoleName()))
+                        .count();
                 roleStats.put(role.getRoleName(), count);
             }
-            
+
             // Get recent users (last 7 days)
             List<User> recentUsers = allUsers.stream()
-                .filter(user -> user.getCreatedAt() != null && 
-                    user.getCreatedAt().isAfter(java.time.LocalDateTime.now().minusDays(7)))
-                .sorted((u1, u2) -> u2.getCreatedAt().compareTo(u1.getCreatedAt()))
-                .limit(10)
-                .collect(java.util.stream.Collectors.toList());
-            
-            // Get users by JLPT level
+                    .filter(u -> u.getCreatedAt() != null
+                            && u.getCreatedAt().isAfter(java.time.LocalDateTime.now().minusDays(7)))
+                    .sorted((u1, u2) -> u2.getCreatedAt().compareTo(u1.getCreatedAt()))
+                    .limit(10)
+                    .toList();
+
+
             Map<String, Long> jlptStats = new HashMap<>();
             for (User.JLPTLevel level : User.JLPTLevel.values()) {
                 long count = allUsers.stream()
-                    .filter(user -> user.getCurrentJlptLevel() == level)
-                    .count();
+                        .filter(u -> u.getCurrentJlptLevel() == level)
+                        .count();
                 jlptStats.put(level.name(), count);
             }
-            
-            // Get users by country
+
             Map<String, Long> countryStats = allUsers.stream()
-                .filter(user -> user.getCountry() != null && !user.getCountry().isEmpty())
-                .collect(java.util.stream.Collectors.groupingBy(
-                    User::getCountry,
-                    java.util.stream.Collectors.counting()
-                ));
-            
+                    .filter(u -> u.getCountry() != null && !u.getCountry().isEmpty())
+                    .collect(java.util.stream.Collectors.groupingBy(
+                            User::getCountry,
+                            java.util.stream.Collectors.counting()
+                    ));
+
             Map<String, Object> dashboard = new HashMap<>();
             dashboard.put("overview", Map.of(
-                "totalUsers", totalUsers,
-                "activeUsers", activeUsers,
-                "verifiedUsers", verifiedUsers,
-                "inactiveUsers", totalUsers - activeUsers,
-                "unverifiedUsers", totalUsers - verifiedUsers,
-                "totalRoles", allRoles.size()
+                    "totalUsers", totalUsers,
+                    "activeUsers", activeUsers,
+                    "verifiedUsers", verifiedUsers,
+                    "inactiveUsers", totalUsers - activeUsers,
+                    "unverifiedUsers", totalUsers - verifiedUsers,
+                    "totalRoles", allRoles.size()
             ));
             dashboard.put("roleDistribution", roleStats);
             dashboard.put("jlptDistribution", jlptStats);
             dashboard.put("countryDistribution", countryStats);
             dashboard.put("recentUsers", recentUsers);
             dashboard.put("lastUpdated", java.time.LocalDateTime.now());
-            
+
             return ResponseEntity.ok(ApiResponse.success("Dashboard data retrieved successfully", dashboard));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to retrieve dashboard data: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to retrieve dashboard data: " + e.getMessage()));
         }
     }
 
@@ -510,11 +518,12 @@ public class AdminController {
     public ResponseEntity<ApiResponse<Map<String, Object>>> getSystemStats() {
         try {
             Map<String, Object> stats = new HashMap<>();
-            stats.put("totalUsers", userService.getAllUsers().size());
-            stats.put("activeUsers", userService.getAllUsers().stream().mapToInt(u -> u.getIsActive() ? 1 : 0).sum());
+            List<User> allUsers = userService.getAllUsers();
+
+            stats.put("totalUsers", allUsers.size());
+            stats.put("activeUsers", allUsers.stream().filter(u -> Boolean.TRUE.equals(u.getIsActive())).count()); // ✅
             stats.put("totalRoles", roleService.getAllRoles().size());
-            
-            // Get current user info safely
+
             try {
                 User currentUser = currentUserService.getCurrentUser()
                         .orElseThrow(() -> new RuntimeException("Not authenticated"));
@@ -524,10 +533,10 @@ public class AdminController {
                 stats.put("currentUser", "Not authenticated");
                 stats.put("currentUserRole", "No role");
             }
-            
+
             return ResponseEntity.ok(ApiResponse.success("System statistics retrieved successfully", stats));
         } catch (Exception e) {
-            return ResponseEntity.ok(ApiResponse.error("Failed to retrieve system statistics: " + e.getMessage()));
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to retrieve system statistics: " + e.getMessage()));
         }
     }
 }
